# KrabSplit

./: CMakeLists.txt  LICENSE  main.cpp
include/: SplitTimerCounter.h
src/: SplitTimerCounter.cpp
